Switched from cassandra to scyllaDB( cpp + low resource consuming offering same performance). UI css changes for skeleton. endStream notification changes to eliminate hardcoded timeout

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -236,7 +236,7 @@
     }
   }
   .skeleton {
-    background: #212121;
+    background: #2f2f2f;
   }
   .sbOrigin {
     transform: translateY(0.15rem) rotate(0deg) translateZ(0px);
